--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
         </li>
         <li>
           <a
-            href="https://www.instagram.com/milel_vieira/?utm_source=qr&r=nametag"
+            href="https://www.instagram.com/miguel4ngelo20/"
             target="_blank"
             >Instagram</a
           >
         </li>
         <li>
-          <a href="https://wa.me/qr/HXIHCZPCT33UE1" target="_blank">WhatsApp</a>
+          <a href="https://api.whatsapp.com/send/?phone=5521990394321&text=Olá,+tudo+bem?" target="_blank">WhatsApp</a>
         </li>
       </ul>
       <div id="social">
